traffic-policies.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: telemetry
  namespace: iot-helm
spec:
  host: telemetry.iot-helm.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 30s
      maxEjectionPercent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: device-manager
  namespace: iot-helm
spec:
  host: device-manager.iot-helm.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 30s
      maxEjectionPercent: 100
